--- a/src/output.css
+++ b/src/output.css
@@ -7,15 +7,20 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-100: oklch(96.2% 0.059 95.617);
     --spacing: 0.25rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
+    --text-base: 1rem;
+    --text-base--line-height: calc(1.5 / 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --font-dm-sans: "DM Sans", sans-serif;
     --color-tneutral-900: hsl(243, 96%, 9%);
     --color-tneutral-800: hsl(243, 27%, 20%);
     --color-tneutral-700: hsl(243, 23%, 24%);
+    --color-tneutral-600: hsl(243, 23%, 30%);
+    --color-tneutral-300: hsl(240, 6%, 70%);
     --color-tneutral-0: hsl(0, 0%, 100%);
   }
 }
@@ -168,6 +173,9 @@
   }
 }
 @layer utilities {
+  .relative {
+    position: relative;
+  }
   .static {
     position: static;
   }
@@ -177,23 +185,17 @@
   .flex {
     display: flex;
   }
+  .hidden {
+    display: none;
+  }
   .table {
     display: table;
   }
   .w-1 {
     width: calc(var(--spacing) * 1);
   }
-  .w-1\/2 {
-    width: calc(1/2 * 100%);
-  }
-  .w-1\/4 {
-    width: calc(1/4 * 100%);
-  }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
-  }
-  .w-3\/4 {
-    width: calc(3/4 * 100%);
+  .w-1\/3 {
+    width: calc(1/3 * 100%);
   }
   .border-collapse {
     border-collapse: collapse;
@@ -213,21 +215,39 @@
   .rounded {
     border-radius: 0.25rem;
   }
+  .rounded-none {
+    border-radius: 0;
+  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .bg-tneutral-700 {
-    background-color: var(--color-tneutral-700);
+  .border-t {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 1px;
+  }
+  .border-t-1 {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 1px;
+  }
+  .border-t-2 {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 2px;
+  }
+  .border-t-amber-100 {
+    border-top-color: var(--color-amber-100);
+  }
+  .border-t-tneutral-600 {
+    border-top-color: var(--color-tneutral-600);
+  }
+  .border-t-tneutral-700 {
+    border-top-color: var(--color-tneutral-700);
   }
   .bg-tneutral-800 {
     background-color: var(--color-tneutral-800);
   }
   .bg-tneutral-900 {
     background-color: var(--color-tneutral-900);
-  }
-  .p-2 {
-    padding: calc(var(--spacing) * 2);
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
@@ -238,11 +258,18 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
-  .py-4 {
-    padding-block: calc(var(--spacing) * 4);
+  .pt-2 {
+    padding-top: calc(var(--spacing) * 2);
+  }
+  .pt-8 {
+    padding-top: calc(var(--spacing) * 8);
   }
   .font-dm-sans {
     font-family: var(--font-dm-sans);
+  }
+  .text-base {
+    font-size: var(--text-base);
+    line-height: var(--tw-leading, var(--text-base--line-height));
   }
   .text-sm {
     font-size: var(--text-sm);
@@ -250,6 +277,9 @@
   }
   .text-tneutral-0 {
     color: var(--color-tneutral-0);
+  }
+  .text-tneutral-300 {
+    color: var(--color-tneutral-300);
   }
   .underline {
     text-decoration-line: underline;
@@ -266,6 +296,23 @@
   .rule {
     width: min(95%, 1200px);
     margin-inline: auto;
+  }
+  .hidden {
+    display: none;
+  }
+  .drop-menu {
+    font-family: var(--font-dm-sans);
+    position: absolute;
+    background-color: var(--color-tneutral-800);
+    top: 3rem;
+    right: 0;
+    border-radius: .25rem;
+    padding: 0.5rem;
+    font-size: 0.875rem;
+  }
+  .units {
+    border-radius: .25rem;
+    padding: 0.25rem 0.325rem;
   }
 }
 @property --tw-border-style {
