--- a/src/output.css
+++ b/src/output.css
@@ -30,6 +30,7 @@
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
+    --radius-3xl: 1.5rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --font-dm-sans: "DM Sans", sans-serif;
@@ -259,6 +260,18 @@
   .table {
     display: table;
   }
+  .min-h-\[\'168px\'\] {
+    min-height: '168px';
+  }
+  .min-h-\[50px\] {
+    min-height: 50px;
+  }
+  .min-h-\[56px\] {
+    min-height: 56px;
+  }
+  .min-h-\[168px\] {
+    min-height: 168px;
+  }
   .w-1 {
     width: calc(var(--spacing) * 1);
   }
@@ -307,6 +320,9 @@
   .justify-between {
     justify-content: space-between;
   }
+  .justify-center {
+    justify-content: center;
+  }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
   }
@@ -331,6 +347,12 @@
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
+  .rounded-3xl {
+    border-radius: var(--radius-3xl);
+  }
+  .rounded-full {
+    border-radius: calc(infinity * 1px);
+  }
   .rounded-lg {
     border-radius: var(--radius-lg);
   }
@@ -348,12 +370,41 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
+  .border-6 {
+    border-style: var(--tw-border-style);
+    border-width: 6px;
+  }
+  .border-8 {
+    border-style: var(--tw-border-style);
+    border-width: 8px;
+  }
+  .border-12 {
+    border-style: var(--tw-border-style);
+    border-width: 12px;
+  }
   .border-t-1 {
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
   }
+  .border-dotted {
+    --tw-border-style: dotted;
+    border-style: dotted;
+  }
+  .border-tneutral-200 {
+    border-color: var(--color-tneutral-200);
+  }
   .border-tneutral-600 {
     border-color: var(--color-tneutral-600);
+  }
+  .border-transparent {
+    border-color: transparent;
+  }
+  .border-t-tneutral-200 {
+    border-top-color: var(--color-tneutral-200);
   }
   .border-t-tneutral-600 {
     border-top-color: var(--color-tneutral-600);
@@ -376,6 +427,12 @@
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
+  .p-8 {
+    padding: calc(var(--spacing) * 8);
+  }
+  .px-0 {
+    padding-inline: calc(var(--spacing) * 0);
+  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
@@ -394,8 +451,14 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
+  }
+  .py-8 {
+    padding-block: calc(var(--spacing) * 8);
   }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
@@ -605,6 +668,11 @@
       justify-content: space-between;
     }
   }
+  .md\:justify-center {
+    @media (width >= 48rem) {
+      justify-content: center;
+    }
+  }
   .md\:gap-4 {
     @media (width >= 48rem) {
       gap: calc(var(--spacing) * 4);
@@ -675,9 +743,12 @@
     padding: 2rem;
     background-color: var(--color-tblue-500);
     font-family: var(--font-dm-sans);
-    background-image: url(../assets/images/bg-today-large.svg);
-    background-repeat: no-repeat;
+    background-image: url(../assets/images/bg-today-small.svg);
     background-size: cover;
+    background-repeat: no-repeat;
+    @media (width >= 48rem) {
+      background-image: url(../assets/images/bg-today-large.svg);
+    }
   }
 }
 @property --tw-border-style {
