--- a/src/output.css
+++ b/src/output.css
@@ -30,7 +30,6 @@
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
-    --radius-3xl: 1.5rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --font-dm-sans: "DM Sans", sans-serif;
@@ -230,6 +229,12 @@
   .row-start-1 {
     grid-row-start: 1;
   }
+  .my-1 {
+    margin-block: calc(var(--spacing) * 1);
+  }
+  .my-2 {
+    margin-block: calc(var(--spacing) * 2);
+  }
   .my-4 {
     margin-block: calc(var(--spacing) * 4);
   }
@@ -259,12 +264,6 @@
   }
   .table {
     display: table;
-  }
-  .min-h-\[\'168px\'\] {
-    min-height: '168px';
-  }
-  .min-h-\[50px\] {
-    min-height: 50px;
   }
   .min-h-\[56px\] {
     min-height: 56px;
@@ -347,9 +346,6 @@
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
-  .rounded-3xl {
-    border-radius: var(--radius-3xl);
-  }
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
@@ -370,18 +366,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
-  .border-6 {
-    border-style: var(--tw-border-style);
-    border-width: 6px;
-  }
-  .border-8 {
-    border-style: var(--tw-border-style);
-    border-width: 8px;
-  }
   .border-12 {
     border-style: var(--tw-border-style);
     border-width: 12px;
@@ -393,9 +377,6 @@
   .border-dotted {
     --tw-border-style: dotted;
     border-style: dotted;
-  }
-  .border-tneutral-200 {
-    border-color: var(--color-tneutral-200);
   }
   .border-tneutral-600 {
     border-color: var(--color-tneutral-600);
@@ -424,6 +405,12 @@
   .bg-tneutral-900 {
     background-color: var(--color-tneutral-900);
   }
+  .p-1 {
+    padding: calc(var(--spacing) * 1);
+  }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
@@ -451,14 +438,8 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
-  .py-4 {
-    padding-block: calc(var(--spacing) * 4);
-  }
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
-  }
-  .py-8 {
-    padding-block: calc(var(--spacing) * 8);
   }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
@@ -668,11 +649,6 @@
       justify-content: space-between;
     }
   }
-  .md\:justify-center {
-    @media (width >= 48rem) {
-      justify-content: center;
-    }
-  }
   .md\:gap-4 {
     @media (width >= 48rem) {
       gap: calc(var(--spacing) * 4);
@@ -730,6 +706,26 @@
     padding: 0.5rem;
     font-size: 0.875rem;
     z-index: 99;
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-color: var(--color-tneutral-600);
+  }
+  .search-menu {
+    display: none;
+    font-family: var(--font-dm-sans);
+  }
+  .search-menu.drop-menu {
+    font-family: var(--font-dm-sans);
+    display: inline-block;
+    position: absolute;
+    background-color: var(--color-tneutral-800);
+    top: 3.5rem;
+    right: 0;
+    border-radius: .5rem;
+    padding: 0.5rem;
+    font-size: 0.875rem;
+    z-index: 99;
+    width: 100%;
     border-style: var(--tw-border-style);
     border-width: 1px;
     border-color: var(--color-tneutral-600);
