--- a/src/styles.css
+++ b/src/styles.css
@@ -39,6 +39,24 @@
     @apply border-1 border-tneutral-600 z-99
   }
 
+  .search-menu {
+    display: none;
+    @apply font-dm-sans
+  }
+
+  .search-menu.drop-menu {
+    font-family: var(--font-dm-sans);
+    display: inline-block;
+    position: absolute;
+    background-color: var(--color-tneutral-800);
+    top: 3.5rem;
+    right: 0;
+    border-radius: .5rem;
+    padding: 0.5rem;
+    font-size: 0.875rem;
+    @apply border-1 border-tneutral-600 z-99 w-full
+  }
+
   .units {
     border-radius: .25rem;
     padding: 0.25rem 0.325rem;
