Make search bar functional

--- a/src/output.css
+++ b/src/output.css
@@ -17,11 +17,9 @@
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
-    --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
     --text-6xl: 3.75rem;
-    --text-6xl--line-height: 1;
     --text-7xl: 4.5rem;
     --text-7xl--line-height: 1;
     --font-weight-medium: 500;
@@ -280,6 +278,9 @@
   .cursor-pointer {
     cursor: pointer;
   }
+  .resize {
+    resize: both;
+  }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -351,6 +352,9 @@
   }
   .border-tneutral-600 {
     border-color: var(--color-tneutral-600);
+  }
+  .border-transparent {
+    border-color: transparent;
   }
   .border-t-tneutral-600 {
     border-top-color: var(--color-tneutral-600);
@@ -497,6 +501,20 @@
     &:hover {
       @media (hover: hover) {
         cursor: pointer;
+      }
+    }
+  }
+  .hover\:border-tneutral-600 {
+    &:hover {
+      @media (hover: hover) {
+        border-color: var(--color-tneutral-600);
+      }
+    }
+  }
+  .hover\:bg-tneutral-700 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-tneutral-700);
       }
     }
   }
@@ -658,25 +676,23 @@
     border-width: 1px;
     border-color: var(--color-tneutral-600);
   }
-  .search-menu {
+  .search-menu:empty {
     display: none;
-    font-family: var(--font-dm-sans);
   }
-  .search-menu.drop-menu {
-    font-family: var(--font-dm-sans);
-    display: inline-block;
+  .search-menu {
     position: absolute;
-    background-color: var(--color-tneutral-800);
     top: 3.5rem;
-    right: 0;
-    border-radius: .5rem;
-    padding: 0.5rem;
-    font-size: 0.875rem;
+    left: calc(var(--spacing) * 0);
     z-index: 99;
-    width: 100%;
+    border-radius: var(--radius-lg);
     border-style: var(--tw-border-style);
     border-width: 1px;
     border-color: var(--color-tneutral-600);
+    background-color: var(--color-tneutral-800);
+    padding: calc(var(--spacing) * 2);
+    font-family: var(--font-dm-sans);
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
   }
   .units {
     border-radius: .25rem;
