--- a/src/styles.css
+++ b/src/styles.css
@@ -71,14 +71,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border: 12px dotted var(--color-tneutral-0);
+    border: 12px dotted transparent;
     border-top: 12px dotted var(--color-tneutral-200);
     border-radius: 50%;
-    animation: spin 2s linear infinite;
-  }
-
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
   }
 }
